; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libiconv_modules/UES/extr_citrus_ues.c_surrogate_to_ucs.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libiconv_modules/UES/extr_citrus_ues.c_surrogate_to_ucs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @surrogate_to_ucs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @surrogate_to_ucs(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = sub nsw i32 %5, 55296
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %4, align 4
  %8 = sub nsw i32 %7, 56320
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %3, align 4
  %10 = shl i32 %9, 10
  %11 = load i32, i32* %4, align 4
  %12 = or i32 %10, %11
  %13 = add nsw i32 %12, 65536
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
